--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "date-fns": "^4.1.0",
     "dotenv": "^17.0.1",
     "formik": "^2.4.6",
+    "js-cookie": "^3.0.5",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.525.0",
     "react": "^19.1.0",
